Filters can only be collapsed when returning to the tab. Fixes SGFE-364. Only non touch devices get hover css pseudo classes. Fixes SGFE-371

--- a/src/css/scss/_responsive/_responsive-gallery-g2-g3.scss
+++ b/src/css/scss/_responsive/_responsive-gallery-g2-g3.scss
@@ -159,8 +159,12 @@ $galleryFourColMax: px-em(979px);
     }
 
     // Button horizontal spacing
-    .btn-group > .btn:not(:first-child) {
-      margin-left: .25em;
+    .btn-group > .btn:not(:last-child) {
+      margin-right: .25em;
+    }
+
+    .color-swatches > *:not(:last-child) {
+      margin-right: .25em;
     }
 
     // Group vertical spacing
